# deepgroebner

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  RNN.ipynb  az.ipynb  az.py  badmatrices.py  baseline_run.py  basic_run.py  bench_0.py  bench_1.py  bench_2.py  bench_3.py  binned_run.py  deepgroebner.yml  eval.py  gym.ipynb  learner.py  mcts-3-20-10-maximum.csv  mcts-3-20-10-uniform.csv  mcts-3-20-10-weighted.csv  mcts.ipynb  randomized_agent.py  results-0-1.html  results-0-2.html  results-0-3.html  results-1-1.html  results-1-2.html  results-1-3.html  results-2-1.html  results-2-2.html  results-2-3.html  results-3-1.html  results-3-2.html  results-3-3.html  run.py  scratch.ipynb  script.py  script.sh  (+10 more)
agents/: buchberger.py  dqn.py  networks.py  pg.py  ppo.py
benchmarks/: 3-20-10-uniform.cpp  cyclic.cpp  cyclic5.cpp  cyclic6.cpp  cyclic7.cpp  random_episodes.cpp  random_episodes.py
data/binom/: run.py
data/old-binom/: 1.h5  100.h5  102.h5  115.h5  122.h5  130.h5  134.h5  145.h5  148.h5  149.h5  152.h5  153.h5  159.h5  16.h5  162.h5  163.h5  165.h5  166.h5  167.h5  169.h5  170.h5  176.h5  177.h5  179.h5  180.h5  19.h5  197.h5  198.h5  199.h5  200.h5  203.h5  207.h5  211.h5  212.h5  217.h5  219.h5  220.h5  226.h5  228.h5  230.h5  (+81 more)
data/old-nonhombinom/: 1000.h5  1025.h5  1125.h5  1175.h5  1425.h5  1650.h5  1700.h5  1800.h5  1825.h5  1925.h5  250.h5  275.h5  300.h5  525.h5  750.h5  README.md
data/paramsearch2/: run.py
data/stats/: 3-20-10-uniform.csv  3-5-5-maximum-homog.csv  5-10-5-uniform.csv
deepgroebner/: atari.py  az.py  binomials.py  buchberger.cpp  buchberger.h  buchberger.pxd  buchberger.py  dqn.py  environments.py  ideals.cpp  ideals.h  ideals.py  mcts.py  networks.py  new_networks.py  pg.py  pg_ac.py  polynomials.cpp  polynomials.h  ppo.py  toyenvs.py  transformer_value_network.py  wrapped.pyx
environments/: atari.py  binomials.py  buchberger.py  hilbert.py  ideals.py  rowreduce.py
epochs_large_test/2021-04-22-11-36-46_run/: args.txt  policy-100.h5  policy-1000.h5  (+98 more)
examples/: README.md  cartpole.py  mnist.py
m2/: Ideals.m2  SelectionStrategies.m2  baselines.m2  bins.m2  generate-binomials-nvars-8.m2  make_bins.m2  make_stats.m2  make_stats2.m2
notebooks/: binomial.ipynb  testing.ipynb
rowreduce/: agents.py  environments.py  kinteractions.py  main.py  tests-dec5.md
run_data_p/: events.out.tfevents.1603840315.gputest.8521.20.v2  events.out.tfevents.1603889254.gputest.10996.22.v2  events.out.tfevents.1603889297.gputest.11300.22.v2  policy-100.h5  policy-120.h5  policy-140.h5  policy-160.h5  policy-180.h5  policy-20.h5  policy-200.h5  policy-220.h5  policy-240.h5  policy-260.h5  policy-280.h5  policy-300.h5  policy-320.h5  policy-340.h5  policy-360.h5  policy-380.h5  policy-40.h5  policy-400.h5  policy-420.h5  policy-440.h5  policy-460.h5  policy-480.h5  policy-500.h5  policy-60.h5  policy-80.h5
run_data_p&v/: events.out.tfevents.1603898698.gputest.14965.20.v2  policy-100.h5  policy-120.h5  policy-140.h5  policy-160.h5  policy-180.h5  policy-20.h5  policy-200.h5  policy-220.h5  policy-240.h5  policy-260.h5  policy-280.h5  policy-300.h5  policy-320.h5  policy-340.h5  policy-360.h5  policy-380.h5  policy-40.h5  policy-400.h5  policy-420.h5  policy-440.h5  policy-460.h5  policy-480.h5  policy-500.h5  policy-60.h5  policy-80.h5
scripts/: cyclic.cpp  cyclic.py  eval.py  make_array.py  make_dist.m2  make_stats.m2  make_strat.cpp  make_strat.m2  train.py
selection/: Ideals.m2  Reduction.m2  SelectionStrategies.m2
tests/: test_buchberger.cpp  test_buchberger.py  test_hilbert.py  test_ideals.cpp  test_ideals.py  test_networks.py  test_pg.py  test_polynomials.cpp  test_ppo.py
time_tests/: transformer.txt
time_tests_run_episodes/: TPMP.txt  pnet.txt  pnet_dot_prod_att.txt  transformer.txt
time_tests_train/: pointer.txt  trans_train_2.txt
(+2665 files in other folders)
